--- a/src/Main-pages/address/address.scss
+++ b/src/Main-pages/address/address.scss
@@ -1,3 +1,8 @@
+.body-address{
 
-font-family: "Roboto",sans-serif;
-font-weight: 300;
+    font-family: "Roboto",sans-serif;
+    font-weight: 300;
+    .address-section{
+        display: flex;
+    }
+}
