--- a/src/Main-pages/header/header.styles.scss
+++ b/src/Main-pages/header/header.styles.scss
@@ -1,12 +1,5 @@
 
 .main-header{
-    height:'100px';
-    background-color: white;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-
     .top{
    display: flex;
    justify-content: space-between;
@@ -19,23 +12,17 @@
     }
 }
     }
-    .bottom{
-       display: flex;
-       justify-content: space-around;
-       overflow-x: auto;
-       overflow-y: hidden;
-
-       a{
-           min-width:100px;
-           display: inline-block;
-       }
-    }
     .bottom::-webkit-scrollbar{
-        background-color: rgba(191, 188, 188, 0.241);
-        height: 5px;
-        border-radius: 10%;
+       display: none
     }
-    
+    .bottom{
+        a:hover{
+            color: dodgerblue;
+            text-decoration: underline;
+            transition: all;
+            transition-duration: 500;
+        }
+    }
 }
 
 
