--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,14 @@
 @import './styles/selected.scss';
 @import './styles/profile.scss';
 
+
+.button {
+    background-color:#4D69FF;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
