--- a/src/Main-pages/orders/orders.scss
+++ b/src/Main-pages/orders/orders.scss
@@ -1,13 +1,13 @@
-.main{
+.main-order{
     
     height: 100vh;
+    padding: 15px;
     .flex-v{
         display: flex;
        flex-direction: row;
        justify-content: space-around;
        background-color: #E5E5E5;
        height: 100vh;
-       padding: 20px;
        overflow-y: scroll;
        overflow-x: scroll;
        
